--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-contentful-demo",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.4",
+    "node": "12.8.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
